--- a/src/layout/index.module.less
+++ b/src/layout/index.module.less
@@ -1,3 +1,11 @@
 .container {
     min-height: 100vh;
+    :global {
+        .content {
+            padding: 0 24px 24px
+        }
+        .breadcrumb-item {
+            cursor: pointer;
+        }
+    }
 }
